lib_LTLIBRARIES = libkameleon-interpolator.la
libkameleon_interpolator_la_SOURCES = Attribute.h \
						Attribute.cpp \
						BATSRUS.h \
						BATSRUS.cpp \
						BATSRUSInterpolator.h \
						BATSRUSInterpolator.cpp \
						Cell3D.h \
						cdf.h \
						Constants.h \
						CTIP.h \
						CTIP.cpp \
						ENLIL.h \
						ENLIL.cpp \
						ENLILInterpolator.h \
						ENLILInterpolator.cpp \
						Kameleon_compatibility.h \
						Kameleon_compatibility.cpp \
						Kameleon_compute_etaj.cpp \
						Kameleon_compute_beta.cpp \
						Kameleon_compute_e.cpp \
						Kameleon_compute_edotj.cpp \
						Kameleon_compute_en.cpp \
						Kameleon_compute_exb.cpp \
						Kameleon_compute_jpar.cpp \
						Kameleon_compute_jxb.cpp \
						Kameleon_compute_n.cpp \
						Kameleon_compute_nv.cpp \
						Kameleon_compute_p.cpp \
						Kameleon_compute_polb.cpp \
						Kameleon_compute_pram.cpp \
						Kameleon_compute_s.cpp \
						Kameleon_compute_scaleByRadius.cpp \
						Kameleon_compute_temp.cpp \
						Kameleon_initializeConversionFactorsToVis.cpp \
						Kameleon_initializeListOfRequiredVariablesForComponentsAndVectors.cpp \
						Kameleon_initializeUnits.cpp \
						Kameleon_initializeVariableAliases.cpp \
						KameleonInterpolator_compute_magnitude.cpp \
						KameleonInterpolator_interpolateSimple.cpp \
						KameleonInterpolator_initializeCalculationMethods.cpp \
						Kameleon_loadVariable.cpp \
						Kameleon_loadVectorVariable.cpp \
						Kameleon_open.cpp \
						Kameleon.cpp \
						Kameleon.h \
						KameleonInterpolator.cpp \
						KameleonInterpolator.h \
						FileReader.cpp \
						FileReader.h \
						Interpolator.h \
						Interpolator.cpp \
						Magnetogram.h \
						Magnetogram.cpp \
						MagnetogramInterpolator.h \
						MagnetogramInterpolator.cpp \
						MAS.h \
						MAS.cpp \
						MASInterpolator.h \
						MASInterpolator.cpp \
						Model.h \
						Model.cpp \
						OpenGGCM.h \
						OpenGGCM.cpp \
						OpenGGCMInterpolator.h \
						OpenGGCMInterpolator.cpp \
						Utils.h \
						Point.h \
						Vector.h \
						cxform.h \
						cxform-auto.c \
						cxform-manual.c
libkameleon_interpolator_la_LDFLAGS = -release 0.1.0
libkameleon_interpolator_la_CFLAGS = -fPIC

#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = kameleon-plus.pc

pkgincludedir = $(includedir)/ccmc
pkginclude_HEADERS = Attribute.h FileReader.h Kameleon.h Kameleon_compatibility.h Model.h Point.h #Shue.h
