bin_PROGRAMS = reader derived #imf
derived_SOURCES = derived_prog.cpp
#derived_LDFLAGS = -L@srcdir@/../ccmc -lkameleon-plus -lkameleon -lcdf
derived_CPPFLAGS = -I@srcdir@/.. -I@srcdir@/../ccmc
derived_LDADD = @srcdir@/../ccmc/libkameleon-plus.la
reader_SOURCES = KameleonTest.cpp
reader_CPPFLAGS = -I@srcdir@/.. -I@srcdir@/../ccmc
reader_LDADD = @srcdir@/../ccmc/libkameleon-plus.la


#imf_SOURCES = IMFTest.cpp
#imf_CPPFLAGS = -I@srcdir@/..
#imf_LDADD = @srcdir@/../ccmc/libkameleon-plus.la


