if ENABLE_JAVA
	JAVA_WRAPPERS = java
else
	JAVA_WRAPPERS =
endif

if ENABLE_PYTHON
	PYTHON_WRAPPERS = python
else
	PYTHON_WRAPPERS =
endif

if ENABLE_C
	C_WRAPPERS = c
else
	C_WRAPPERS = 
endif

if ENABLE_FORTRAN
	FORTRAN_WRAPPERS = fortran
else
	FORTRAN_WRAPPERS =
endif

SUBDIRS = $(JAVA_WRAPPER) $(PYTHON_WRAPPER) $(C_WRAPPERS) $(FORTRAN_WRAPPERS)
DIST_SUBDIRS = java python c fortran
EXTRA_DIST = ccmc.i
