bin_PROGRAMS = kameleon-compat #filereader_compat tracer_c

kameleon_compat_SOURCES = Kameleon_compatibility_test.c
kameleon_compat_LDADD = @builddir@/../../ccmc/libkameleon-plus.la @builddir@/../../ccmc/wrappers/c/libkameleon-plus-wrapper-c.la
kameleon_compat_LDFLAGS = -lstdc++
kameleon_compat_CFLAGS = -I@srcdir@/../..
